[package]
name = "rshark"
version = "0.1.0"
authors = ["pmk21 <prithvikrishna49@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
tui = "0.10"
termion = "1.5"
pest = "2.0"
pest_derive = "2.0"
filters = "0.3.0"
cidr-utils = "0.4.3"
# log = "0.4.11"

[dependencies.pnet]
version = "0.26.0"
